syntax = "proto3";

package calendarGRPC;

option go_package = "calendarGRPC/pb;pb";

// Local imports for grpc-gateway HTTP annotations and Empty
// import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/descriptor.proto";
import "google/api/http.proto";

// Service definition
service CalendarService {
  rpc HealthCheck(google.protobuf.Empty) returns (HealthResponse) {
    option (google.api.http) = {
      get: "/health"
    };
  }

  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {
    option (google.api.http) = {
      post: "/api/create"
      body: "*"
    };
  }

  rpc ListEvents(google.protobuf.Empty) returns (ListEventsResponse) {
    option (google.api.http) = {
      get: "/api/events"
    };
  }

  rpc ListEventsDay(google.protobuf.Empty) returns (ListEventsResponse) {
    option (google.api.http) = {
      get: "/api/eventsDay"
    };
  }

  rpc ListEventsWeek(google.protobuf.Empty) returns (ListEventsResponse) {
    option (google.api.http) = {
      get: "/api/eventsWeek"
    };
  }

  rpc ListEventsMonth(google.protobuf.Empty) returns (ListEventsResponse) {
    option (google.api.http) = {
      get: "/api/eventsMonth"
    };
  }

  rpc GetEvent(GetEventRequest) returns (GetEventResponse) {
    option (google.api.http) = {
      get: "/api/get/{id}"
    };
  }

  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse) {
    option (google.api.http) = {
      delete: "/api/delete/{id}"
    };
  }

  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {
    option (google.api.http) = {
      put: "/api/update/{event.id}"
      body: "*"
    };
  }
}

// ====== Messages ======
message HealthResponse {
  string status = 1;
}

message CreateEventRequest {
  Event event = 1;
}

message CreateEventResponse {
  bool success = 1;
  string error = 2;
}

message ListEventsResponse {
  repeated Event events = 1;
}

message GetEventRequest {
  int32 id = 1;
}

message GetEventResponse {
  Event event = 1;
  string error = 2;
}

message DeleteEventRequest {
  int32 id = 1;
}

message DeleteEventResponse {
  bool success = 1;
  string error = 2;
}

message UpdateEventRequest {
  Event event = 1;
}

message UpdateEventResponse {
  bool success = 1;
  string error = 2;
}

// ====== Event ======
message Event {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string start = 4;   // ISO8601 datetime
  string end = 5;     // optional
  bool allDay = 6;
  string clinic = 7;
  int32 userId = 8;
  string service = 9;
}
